added orginal project links and githublinks

--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
   <div class="project-gallery">
 
     <div class="project-card">
-      <a href="https://your-weather-app.netlify.app" target="_blank">
-        <img src="task-management.jpg" alt="Task management">
+      <a href="https://gk-quiz-pink.vercel.app/" target="_blank">
+        <img src="quiz1.jpg" alt="QUIZ APP">
       </a>
-      <h3>Task management</h3>
-      <p>A responsive Task management using OpenWeather API.</p>
-      <a href="https://github.com/ranjithyadav04/Task-Mangement-App-FullStack-.git" target="_blank">View Code</a>
+      <h3>Quiz App</h3>
+      <p>A responsive Quiz App of Genaral knowledge Questions.</p>
+      <a href="https://github.com/ranjithyadav04/gk-quiz.git" target="_blank">View Code</a>
     </div>
 
     <div class="project-card">
-      <a href="https://your-portfolio.netlify.app" target="_blank">
+      <a href="https://portfolio-roan-ten-45.vercel.app/" target="_blank">
         <img src="port.jpg" alt="Portfolio Website">
       </a>
       <h3>Portfolio Website</h3>
       <p>This personal website showcasing my skills and projects.</p>
-      <a href="https://github.com/yourusername/portfolio-site" target="_blank">View Code</a>
+      <a href="https://github.com/ranjithyadav04/Portfolio.git" target="_blank">View Code</a>
     </div>
 
     
@@ -163,6 +163,11 @@
     <p>gmail</p>
     <a href="mailto:ranjithpodamyakala@gmail.com" class="social-icon email">
       <i class="fas fa-envelope"></i>
+    </a>
+    <p>github</p>
+    <a href="https://www.github.com/ranjithyadav04" target="_blank" class="social-icon instagram">
+      <i class="fab fa-github"></i>
+    
     </a>
   </div>
 </section>
